# ATOM

./: .dockerignore  .gitignore  README.md  architecture_guide.html  atom_example.md  atom_external_overview_draft_for_internal_review.md  atom_overview_draft.md  bench_test.py  compilation_cudagraph_guide.html  configuration_guide.html  distributed_guide.html  example.py  genindex.html  index.html  installation.html  model_ops_guide.html  model_support_guide.html  objects.inv  plan-pr2-fallback-dispatch.md  pyproject.toml  quickstart.html  scheduling_kv_cache_guide.html  search.html  searchindex.js  serving_benchmarking_guide.html
_sources/: quickstart.rst.txt
api/: models.html  serving.html
atom/: config.py  sampling_params.py
docker/: Dockerfile  Dockerfile.clean  Dockerfile.wheels
docs/: conf.py  installation.rst  objects.inv  searchindex.js
recipes/: DeepSeek-V4-Pro.md  pull_dsv4_pro_weights.sh
scripts/: silicon_one_shot.sh  test_golden_output.sh
tests/: conftest.py  test_aiter_mla_metadata.py  test_attention_dispatch.py  test_block_manager.py  test_block_manager_multipool.py  test_ck_free_mode.py  test_config_kv_cache_pool_blocks.py  test_deepseek_v4_w43_consume.py  test_deepseek_v4_w43_redo.py  test_deepseek_v4_w44_state_migration.py  test_deepseek_v4_w44_state_redo.py  test_dsv4_forward_batch.py  test_dsv4_mla_specs.py  test_dsv4_multireq_guard.py  test_dsv4_pool.py  test_dsv4_pool_indexer_dtype.py  test_dsv4_pool_main_kv_split.py  test_envs.py  test_flydsl_moe.py  test_kv_cache_interface.py  test_mla_prefill_routing.py  test_moe_shapes.py  (+10 more)
(+197 files in other folders)
